--- a/backend/package.json
+++ b/backend/package.json
@@ -5,15 +5,21 @@
   "main": "index.js",
   "scripts": {
     "test": "node index.js *.html",
-    "start": "node index.js *.html"
+    "start": "node index.js *.html",
+    "migrate:up": "node-pg-migrate up",
+    "migrate:down": "node-pg-migrate down",
+    "migrate:redo": "node-pg-migrate redo",
+    "migrate:create": "node-pg-migrate create"
   },
   "author": "bemmo",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
+    "node-pg-migrate": "^7.8.0",
     "nodemailer": "^6.9.3",
     "pg-promise": "^11.10.2"
   }
