docker compose configuration

--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
 POSTGRESDB_USER=postgres
 POSTGRESDB_ROOT_PASSWORD=admin
 POSTGRESDB_DATABASE=sn_weather
-POSTGRESDB_LOCAL_PORT=5433
-POSTGRESDB_DOCKER_PORT=5432
-DATABASE_URL=postgres://postgres:admin@172.18.0.2:5432/sn_weather
+POSTGRESDB_PORT=5432
+POSTGRESDB_IP=172.18.0.2
+# DATABASE_URL=postgres://postgres:admin@172.18.0.2:5432/sn_weather
 
-NODE_LOCAL_PORT=3000
-NODE_DOCKER_PORT=3000
+BACKEND_NODE_PORT=3000
+BACKEND_NODE_IP=172.18.0.3
 
-HOST_API="http://172.18.0.3:3000"
+HOST_API="http://${BACKEND_NODE_IP}:${BACKEND_NODE_PORT}"
 HOST_WEATHER_API="https://api.openweathermap.org/data/2.5/weather"
 API_KEY="970f9e72cca5014fbc9f95aded667703"
