--- a/script_sn_weather/dockerfile
+++ b/script_sn_weather/dockerfile
@@ -5,4 +5,9 @@ WORKDIR /script_sn_weather
 COPY package.json .
 RUN npm install
 COPY . .
-CMD npm start
+COPY docker-entrypoint.sh /usr/local/bin/
+RUN chmod 777 /usr/local/bin/docker-entrypoint.sh && \
+    ln -s usr/local/bin/docker-entrypoint.sh /
+
+ENTRYPOINT ["docker-entrypoint.sh"]
+# CMD npm start
