--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -8,4 +8,8 @@ COPY package.json .
 RUN npm install
 COPY . .
 EXPOSE 3000
+COPY docker-entrypoint.sh /usr/local/bin/
+RUN chmod 777 /usr/local/bin/docker-entrypoint.sh && \
+    ln -s usr/local/bin/docker-entrypoint.sh / 
+ENTRYPOINT ["docker-entrypoint.sh"]
 CMD npm start
