--- a/script_sn_weather/.env.sample
+++ b/script_sn_weather/.env.sample
@@ -1,5 +1,6 @@
 HOST_API="http://localhost:3000"
 HOST_WEATHER_API="https://api.openweathermap.org/data/2.5/weather"
 API_KEY="970f9e72cca5014fbc9f95aded667703"
+INTERVAL=0
 
 
