--- a/script_sn_weather/package.json
+++ b/script_sn_weather/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.9",
+    "http": "^0.0.1-security",
     "node-environment": "^0.5.1"
   }
 }
